[package]
name = "bevy_rrrrrrrrespawn"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.11.3", features = ["wav"] }
bevy_rapier2d = "^0.22.0"
bevy_ecs_ldtk = "^0.8.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["local-machine"]
local-machine = ["bevy/wayland"]